--- a/SimuladoMurex/SimuladoMurex.Domain/SimuladoMurex.Domain.csproj
+++ b/SimuladoMurex/SimuladoMurex.Domain/SimuladoMurex.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
