--- a/SimuladoMurex/SimuladoMurex.WebApi/SimuladoMurex.WebApi.csproj
+++ b/SimuladoMurex/SimuladoMurex.WebApi/SimuladoMurex.WebApi.csproj
@@ -13,8 +13,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.3" />
-    <PackageReference Include="MySql.Data" Version="8.0.20" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.13" />
   </ItemGroup>
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
@@ -40,6 +38,19 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ClientApp\src\app\user\register\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="customersDataSet.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>customersDataSet.xsd</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="customersDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>customersDataSet.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
